feat: stream output workflow logs
